--- a/module-3/found_items.html
+++ b/module-3/found_items.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12" ng-repeat="item in items">
       <div class="menu-item-section">
-        <p class="menu-item-name text-center">{{item.name}}</p>
+        <p class="menu-item-name text-center">{{item.name}} ({{item.short_name}})</p>
         <p class="menu-item-desc text-center">{{item.description}}</p>
         <button class="btn btn-danger btn-menu-item" ng-click="onRemove({index : $index})">Don't want this one!</button>
       </div>
